# gbl-hacker

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  seed.yaml
.ouroboros/: mechanical.toml
fixtures/snapshots/: great_league__upper__2026-05-19.json
scripts/: build_dex.py  build_gamemaster.py  recon_taiman.py
src/gbl_hacker/: __init__.py  build_registry.py  cli.py  coherence.py  critique.py  dex.py  gamemaster.py  trust.py  validation_log_aggregator.py
src/gbl_hacker/data/: __init__.py  cpm.json  gamemaster.json  move_ja_to_pvpoke.json  pokedex_localized.json  rankings_gl.json  type_chart.json  (+1 more)
tests/: test_asymmetric_shields.py  test_build_coherence.py  test_build_rationale_card.py  test_cli_refresh.py  test_cli_report_rating.py  test_cli_show.py  test_compute_meta_coverage.py  test_conditional_bait.py  test_critique.py  test_expected_win_rate.py  test_fetch_taiman.py  test_forced_switch_energy_preservation.py  test_meta_coverage.py  test_pareto_filter.py  test_parse_taiman.py  test_persist_snapshot.py  test_rank_top_k.py  test_rating_log_entry.py  test_rating_log_store.py  test_reference_loader.py  test_reference_overlap.py  test_reference_verify.py  test_render_rationale_cards.py  test_render_snapshot.py  test_select_favorable_matchups.py  test_select_unfavorable_matchups.py  test_switch_energy.py  test_switch_tempo_cost.py  test_trust.py  test_validation_log_aggregator.py  test_worst_case_robustness.py
tests/fixtures/: recommendations_frozen_v1.json  reference_great_league_pvpoke_sample.json  taiman_recommend_great_league.html  taiman_season_league.json
(+29 files in other folders)
