[project]
name = "gbl-hacker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "blakkim", email = "blake.kim@postalpine.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "playwright>=1.59.0",
]

[project.scripts]
# Console-script entry point for the v0.1 ingestion CLI.
# Sub-AC 4: ``gblh refresh`` wires fetch → parse → persist end-to-end.
gblh = "gbl_hacker.cli:run"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
